--- a/Charity:water.html
+++ b/Charity:water.html
@@ -215,7 +215,7 @@
     </div>
 
     <div class="hero-image">
-      <img src="https://charitywater-assets.s3.amazonaws.com/images/photos/2020/05/CW_Project_Photo_2014_Ethiopia_CW4E0138_1600px.jpg" alt="Charity Water project photo" />
+      <img src="Girl Charity water picture.jpg" alt="Charity Water project photo" />
     </div>
   </section>
 </body>
